sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:19: error: value -- is not a member of Int
    nbVal --
          ^